vendored_parsers/tree-sitter-clojure/test/corpus/quoting_lit.txt
================================================================================
Quoted Symbol
================================================================================

'a-sym

--------------------------------------------------------------------------------

(source
  (quoting_lit
    (sym_lit (sym_name))))

================================================================================
Quoted List
================================================================================

'(1 2 3)

--------------------------------------------------------------------------------

(source
  (quoting_lit
    (list_lit
      (num_lit)
      (num_lit)
      (num_lit))))
